# HOG_Parallelized

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: common.h.F9106FDE22DE1FAA.idx  hog_openmp.cpp.B504B4695C1B4DC5.idx  hog_serial.cpp.2D4821C2EBD4D600.idx  main.cpp.8104FF0E14EC367E.idx  timing.cpp.91182EC3C0E10D4A.idx  timing.hpp.E0C51DC448581414.idx
include/: common.h
src/: hog_openmp.cpp  hog_serial.cpp  main.cpp
